--- a/0001-demo.html
+++ b/0001-demo.html
@@ -556,72 +556,6 @@
 }
 
 
-.floating-cta {
-  position: fixed;
-  bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #fff3cd;
-  color: #856404;
-  border: 1px solid #ffeeba;
-  border-radius: 8px;
-  padding: 10px 15px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
-  animation: floatUpDown 2.5s ease-in-out infinite;
-  max-width: 95%;
-  white-space: nowrap;
-}
-
-/* Message Text */
-.cta-message {
-  font-weight: 600;
-}
-
-/* Close Button */
-.floating-cta .close-btn {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  font-size: 16px;
-  cursor: pointer;
-  color: #856404;
-}
-
-/* CTA Button */
-.cta-button {
-  background-color: #28a745;
-  color: white;
-  padding: 8px 16px;
-  text-decoration: none;
-  border-radius: 6px;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
-}
-
-.cta-button:hover {
-  background-color: #218838;
-}
-
-/* Animation */
-@keyframes floatUpDown {
-  0%, 100% { transform: translateX(-50%) translateY(0); }
-  50% { transform: translateX(-50%) translateY(-5px); }
-}
-
-
-
-
-
-
-
-
-
-
-
 
   </style>
 </head>
@@ -641,15 +575,6 @@
 
 </div>
 
-<div class="floating-cta" id="ctaBox">
-  <span class="close-btn" onclick="document.getElementById('ctaBox').style.display='none'">✖</span>
-  <span class="cta-message"></span>
-  <a href="1000paid-cousilling.html" class="cta-button">Access Paid Counseling</a>
-</div>
-
-
-
-
 
 
 
@@ -658,9 +583,6 @@
 
 
   </header>
-
-
-
 
   <script>
   const updates = [
@@ -722,10 +644,9 @@
     <section class="eamcet-section">
       <h2 class="section-title">🎓 EAPCET Quick Access</h2>
       <div class="eamcet-buttons">
-        <a href="1000paid-cousilling.html" class="eamcet-btn">🎯Counselling support</a>
-        <a href="999-TS-COLLEGE-FILTER..html" class="eamcet-btn">✅ College Filter</a>
+        <a href="999-TS-COLLEGE-FILTER..html" class="eamcet-btn">🎯 College Filter</a>
         <a href="999-TS-COLLEGE-PREDUCTOR.HTML" class="eamcet-btn">📊 College Predictor</a>
-     
+        <a href="index-branches.html" class="eamcet-btn">📚 Branch-wise Info</a>
         <a href="100-ts-20.html" class="eamcet-btn">🏆 Top Colleges</a>
       </div>
     </section>
@@ -741,7 +662,7 @@
         <i class="fas fa-graduation-cap"></i>
         Degree
       </a>
-      <a href="index-pharma.html" class="quick-link">
+      <a href="" class="quick-link">
         <i class="fas fa-flask"></i>
         Pharma
       </a>
@@ -749,23 +670,23 @@
         <i class="fas fa-school"></i>
         Intermediate
       </a>
-      <a href="991schools-con.html" class="quick-link">
+      <a href="" class="quick-link">
         <i class="fas fa-chalkboard-teacher"></i>
         Schools
       </a>
-      <a href="index-pharma copy.html" class="quick-link">
+      <a href="#" class="quick-link">
         <i class="fas fa-university"></i>
         MBA
       </a>
-      <a href="01-cut-off.html" class="quick-link">
+      <a href="#" class="quick-link">
         <i class="fas fa-file-pdf"></i>
         Cutoff PDFs
       </a>
-      <a href="INDEX-PAIDCORCES.html" class="quick-link">
+      <a href="#" class="quick-link">
         <i class="fas fa-rupee-sign"></i>
         Paid Courses
       </a>
-      <a href="" class="quick-link">
+      <a href="#" class="quick-link">
         <i class="fas fa-phone-alt"></i>
         Contact Us
       </a>
@@ -774,12 +695,6 @@
         Student Feedback
       </a>
     </div>
-
-
-
-
-
-
 
     <!-- Video Section -->
     <section>
