--- a/900-demo-degree.html
+++ b/900-demo-degree.html
@@ -145,7 +145,7 @@
 
   <div class="container">
     <img src="https://media4.giphy.com/media/m9nax2NXWEHOwbNGjh/giphy.gif?cid=6c09b9526qykq02olmpv1spa4nolsahunzvca5poqb10wql1&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s" alt="Under Construction">
-    <h1><font size="5" color="green">Degree Portal 🚧</font></h1>
+    <h1><font size="5" color="green">Degree Portal 🚧<br> under construction</font></h1>
     <p>
       We’re currently building this page with advanced features for the <strong>Complete Degree Guide</strong>.  
       From expert counseling tools to personalized student services — everything you need is on the way!
