--- a/index-branches.html
+++ b/index-branches.html
@@ -223,7 +223,7 @@
         <div class="promo-box">
             <h2>📌 Need Help with EAMCET Counseling?</h2>
             <p>Confused about choosing the right branch? Book our 1-on-1 <strong>paid counseling</strong> session for expert guidance. We'll help you make the smartest choice!</p>
-            <a href="your-paid-counseling-link.html" target="_blank">
+            <a href="1000paid-cousilling.html" target="_blank">
                 <button>💬 Get Counseling Help</button>
             </a>
         </div>
