--- a/index.html
+++ b/index.html
@@ -556,6 +556,72 @@
 }
 
 
+.floating-cta {
+  position: fixed;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff3cd;
+  color: #856404;
+  border: 1px solid #ffeeba;
+  border-radius: 8px;
+  padding: 10px 15px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+  animation: floatUpDown 2.5s ease-in-out infinite;
+  max-width: 95%;
+  white-space: nowrap;
+}
+
+/* Message Text */
+.cta-message {
+  font-weight: 600;
+}
+
+/* Close Button */
+.floating-cta .close-btn {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  color: #856404;
+}
+
+/* CTA Button */
+.cta-button {
+  background-color: #28a745;
+  color: white;
+  padding: 8px 16px;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+  background-color: #218838;
+}
+
+/* Animation */
+@keyframes floatUpDown {
+  0%, 100% { transform: translateX(-50%) translateY(0); }
+  50% { transform: translateX(-50%) translateY(-5px); }
+}
+
+
+
+
+
+
+
+
+
+
+
 
   </style>
 </head>
@@ -575,6 +641,15 @@
 
 </div>
 
+<div class="floating-cta" id="ctaBox">
+  <span class="close-btn" onclick="document.getElementById('ctaBox').style.display='none'">✖</span>
+  <span class="cta-message"></span>
+  <a href="1000paid-cousilling.html" class="cta-button">Access Paid Counseling</a>
+</div>
+
+
+
+
 
 
 
@@ -583,6 +658,9 @@
 
 
   </header>
+
+
+
 
   <script>
   const updates = [
@@ -644,9 +722,10 @@
     <section class="eamcet-section">
       <h2 class="section-title">🎓 EAPCET Quick Access</h2>
       <div class="eamcet-buttons">
-        <a href="999-TS-COLLEGE-FILTER..html" class="eamcet-btn">🎯 College Filter</a>
+        <a href="1000paid-cousilling.html" class="eamcet-btn">🎯Counselling support</a>
+        <a href="999-TS-COLLEGE-FILTER..html" class="eamcet-btn">✅ College Filter</a>
         <a href="999-TS-COLLEGE-PREDUCTOR.HTML" class="eamcet-btn">📊 College Predictor</a>
-        <a href="index-branches.html" class="eamcet-btn">📚 Branch-wise Info</a>
+     
         <a href="100-ts-20.html" class="eamcet-btn">🏆 Top Colleges</a>
       </div>
     </section>
@@ -662,11 +741,11 @@
         <i class="fas fa-graduation-cap"></i>
         Degree
       </a>
-      <a href="#" class="quick-link">
+      <a href="index-pharma.html" class="quick-link">
         <i class="fas fa-flask"></i>
         Pharma
       </a>
-      <a href="#" class="quick-link">
+      <a href="992inter-con.html" class="quick-link">
         <i class="fas fa-school"></i>
         Intermediate
       </a>
@@ -674,19 +753,19 @@
         <i class="fas fa-chalkboard-teacher"></i>
         Schools
       </a>
-      <a href="#" class="quick-link">
+      <a href="index-pharma copy.html" class="quick-link">
         <i class="fas fa-university"></i>
         MBA
       </a>
-      <a href="#" class="quick-link">
+      <a href="01-cut-off.html" class="quick-link">
         <i class="fas fa-file-pdf"></i>
         Cutoff PDFs
       </a>
-      <a href="#" class="quick-link">
+      <a href="INDEX-PAIDCORCES.html" class="quick-link">
         <i class="fas fa-rupee-sign"></i>
         Paid Courses
       </a>
-      <a href="#" class="quick-link">
+      <a href="" class="quick-link">
         <i class="fas fa-phone-alt"></i>
         Contact Us
       </a>
@@ -695,6 +774,12 @@
         Student Feedback
       </a>
     </div>
+
+
+
+
+
+
 
     <!-- Video Section -->
     <section>
