--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 <div class="floating-cta" id="ctaBox">
   <span class="close-btn" onclick="document.getElementById('ctaBox').style.display='none'">✖</span>
   <span class="cta-message"></span>
-  <a href="1000paid-cousilling.html" class="cta-button">Access Paid Counseling</a>
+  <a href="1000paid-cousilling.html" class="cta-button">EAMPCET Counseling Support</a>
 </div>
 
 
@@ -836,10 +836,10 @@
     </div>
     <div class="founder-text">
       <h2>Hi, I'm Balaji Nayak</h2>
-<p class="tagline">Founder of this platform — built to guide every student, every step.</p>
+<p class="tagline">This platform — built to guide every student, every step.</p>
 <p class="bio">
-  This site is not just for EAMCET or JEE. I built it to support all types of students — school, 10th, inter, diploma, degree, entrance exams, and even PG admissions like MBA/MCA.
-  <br><br>
+  
+
   Whether you're confused about career options, looking for exam dates, cutoff info, or full guidance — everything is here. Verified. Updated. Designed to save your time and guide you right.
   <br><br>
   I also offer paid group exam guidance, online sessions, and course recommendations. You don’t need to run around — just start here.
