--- a/01-cut-off.html
+++ b/01-cut-off.html
@@ -178,8 +178,8 @@
   <section class="hero">
     <h2>Your Journey to College Starts Here!</h2>
     <p>Get expert guidance, real-time data, and career clarity — all in one place.</p>
-    <a href="predictor.html" class="btn">🎯 Use College Predictor</a>
-    <a href="counseling.html" class="btn">💬 Book Paid Counseling</a>
+    <a href="999-TS-COLLEGE-PREDUCTOR.HTML" class="btn">🎯 Use College Predictor</a>
+    <a href="1000paid-cousilling.html" class="btn">💬 Book Paid Counseling</a>
   </section>
 
  
@@ -195,7 +195,7 @@
     Our tools are powered by real 2024 data, filters, and logic — not just copy-paste PDFs.</p>
 
     <p style="margin-top: 20px;">
-      <a href="TS_EAMCET_Colleges_161_180.xlsx" class="btn"> Download TS EAPCET 2024 CUTOFF'S</a>
+      <a href="03_TGEAPCET_2024_FinalPhase_LastRanks (1) - Copy (1).xlsx" class="btn"> Download TS EAPCET 2024 CUTOFF'S</a>
       
     </p>
   </section>
@@ -217,7 +217,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>📧 Email: balanjuedu@gmail.com | 📞 WhatsApp: +91-XXXXXXXXXX</p>
+    <p>📧 Email: balanjuconsultancy@gmail.com | 📞 WhatsApp: +91-720 7800 211</p>
     <p>Made with ❤️ in Telangana | &copy; 2025 Balanju Consultancy</p>
   </footer>
 
