--- a/index-branches.html
+++ b/index-branches.html
@@ -2,176 +2,190 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Balanju Consultancy | Branches Info</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #e0f7fa;
-            color: #003344;
-        }
+    <title>Branches Info| Balanju Consultancy </title>
+  <style>
+    /* Base Styles */
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #f0f9f9;
+        color: #003344;
+    }
+
+    header {
+        background-color: #00796b;
+        color: white;
+        padding: 30px 20px;
+        text-align: center;
+        font-size: 34px;
+        font-weight: bold;
+        letter-spacing: 1.5px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    h1 {
+        font-size: 28px;
+        text-align: center;
+        margin: 40px 0 20px;
+        color: #00695c;
+    }
+
+    .intro {
+        text-align: center;
+        margin: 20px auto;
+        padding: 0 20px;
+        max-width: 900px;
+    }
+
+    .intro h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+        color: #00796b;
+    }
+
+    .intro p {
+        font-size: 17px;
+        line-height: 1.6;
+        color: #004d40;
+    }
+
+    .branches {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+        gap: 20px;
+        padding: 0 5%;
+        margin-bottom: 40px;
+    }
+
+    .branch-link {
+        background-color: white;
+        border-radius: 12px;
+        padding: 18px;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 600;
+        color: #004d40;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+        transition: transform 0.3s, background-color 0.3s;
+    }
+
+    .branch-link a {
+        color: inherit;
+        text-decoration: none;
+        display: block;
+    }
+
+    .branch-link:hover {
+        background-color: #e0f2f1;
+        transform: translateY(-5px);
+    }
+
+    /* Promo container */
+    .branch-promo-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        padding: 0 5%;
+        justify-content: center;
+        margin-bottom: 50px;
+    }
+
+    .promo-box {
+        background-color: #fff3cd;
+        padding: 25px;
+        border-radius: 15px;
+        max-width: 350px;
+        width: 100%;
+        text-align: center;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .promo-box h2 {
+        color: #d84315;
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    .promo-box p {
+        font-size: 15px;
+        margin-bottom: 20px;
+        color: #5d4037;
+    }
+
+    .promo-box button {
+        background-color: #ff9800;
+        color: white;
+        border: none;
+        padding: 12px 24px;
+        font-size: 16px;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .promo-box button:hover {
+        background-color: #f57c00;
+    }
+
+    /* Marquee Link */
+    marquee a {
+        text-decoration: none;
+        font-size: 20px;
+        color: green;
+    }
+
+    /* Mobile Responsive */
+    @media (max-width: 768px) {
         header {
-            background-color: #00796b;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 36px;
-            font-weight: bold;
-            letter-spacing: 2px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-        .intro {
-            text-align: center;
-            margin: 30px auto;
-            width: 80%;
-        }
-        .intro h2 {
-            font-size: 28px;
-            color: #00695c;
-        }
-        .intro p {
-            font-size: 18px;
-            color: #004d40;
-        }
-        .branches {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 30px;
-            width: 90%;
-            margin: 0 auto;
-        }
-        .branch-link {
-            background-color: white;
-            padding: 20px;
-            border-radius: 15px;
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            transition: all 0.3s ease-in-out;
-        }
-        .branch-link:hover {
-            background-color: #b2dfdb;
-            transform: scale(1.03);
-        }
-        .branch-link a {
-            text-decoration: none;
-            color: #004d40;
+            font-size: 26px;
+            padding: 20px 10px;
         }
 
-        /* Promo box container */
-        .branch-promo-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            gap: 30px;
-            padding: 30px;
-            width: 95%;
-            margin: auto;
-            flex-wrap: wrap;
+        h1 {
+            font-size: 22px;
+            margin: 30px 0 15px;
+        }
+
+        .intro h2 {
+            font-size: 20px;
+        }
+
+        .intro p {
+            font-size: 15px;
+        }
+
+        .branch-link {
+            font-size: 16px;
+            padding: 14px;
         }
 
         .promo-box {
-            background-color: #fff3cd;
             padding: 20px;
-            border-radius: 12px;
-            max-width: 300px;
-            flex: 1;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            text-align: center;
         }
 
         .promo-box h2 {
-            margin-top: 0;
-            font-size: 22px;
-            color: #bf360c;
+            font-size: 18px;
         }
 
         .promo-box p {
-            font-size: 16px;
+            font-size: 14px;
         }
 
         .promo-box button {
-            background-color: #ff9800;
-            color: white;
-            border: none;
-            padding: 10px 20px;
+            font-size: 15px;
+            padding: 10px 18px;
+        }
+
+        marquee a {
             font-size: 16px;
-            border-radius: 8px;
-            cursor: pointer;
         }
+    }
+</style>
 
-        .promo-box button:hover {
-            background-color: #f57c00;
-        }
-
-
-        /* 📱 Enhanced Responsive Design */
-@media (max-width: 768px) {
-  .main-header {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 15px;
-    padding: 20px 15px;
-  }
-
-  .main-header .left h1 {
-    font-size: 22px;
-  }
-
-  .main-header .right {
-    width: 100%;
-    margin-left: 0;
-    font-size: 13px;
-    padding: 8px 10px;
-  }
-
-  .scroll-text {
-    font-size: 13px;
-  }
-
-  .hero h2 {
-    font-size: 24px;
-  }
-
-  .hero p {
-    font-size: 16px;
-  }
-
-  .hero .btn {
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-    font-size: 15px;
-  }
-
-  .section {
-    padding: 20px 15px;
-  }
-
-  .section h3 {
-    font-size: 20px;
-  }
-
-  .section p {
-    font-size: 15px;
-  }
-
-  .btn {
-    font-size: 14px;
-    padding: 10px 15px;
-    width: 100%;
-    box-sizing: border-box;
-    text-align: center;
-  }
-}
-
-    </style>
 </head>
 <body>
-    <header>🚀HERE EXPLORE ENGINEERING BRANCHES🚀</header>
+    <header>🚀EXPLORE ENGINEERING BRANCHES🚀</header>
 
     <div class="intro">
         <h2>📚B.Tech Branches</h2>
@@ -194,7 +208,7 @@
         <div class="branch-link"><a href="13cloud_computing.html">☁️ Cloud Computing</a></div>
     </div>
 
-    <h1>🔧 Core Engineering Branches (Traditional)</h1>
+    <h1>🔧 Core Engineering Branches </h1>
     <div class="branches">
         <div class="branch-link"><a href="14ece.html">📡 ECE</a></div>
         <div class="branch-link"><a href="14eee.html">⚡ EEE</a></div>
@@ -228,7 +242,7 @@
             </a>
         </div>
     </div>
-    <h1><marquee scrollamount="20"><font color="GREEN" size="20" FACE="roboto"><a href="index-trending-branc.html">TOP 10 BRANCHES IN ENGINEERING</a></font></marquee></h1>
+    <h1><marquee scrollamount="10"><font color="GREEN" size="20" FACE="roboto"><a href="index-trending-branc.html">TOP 10 BRANCHES IN ENGINEERING</a></font></marquee></h1>
 
 </body>
 </html>
